# ostis-mobile-robots

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yml  mkdocs.yml  repo.path
.run/: sc-machine.run.xml
docs/: index.md
knowledge-base/mobile-robots/examples/: example_1.scs  obstacle.scs
knowledge-base/ui_menu/: ui_main_menu.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/transport-module/: CMakeLists.txt  transport_module.cpp  transport_module.hpp
problem-solver/cxx/transport-module/agents/: mobile_robot_analyzer_agent.cpp  mobile_robot_analyzer_agent.hpp  mobile_robot_coordination_agent.cpp  mobile_robot_coordination_agent.hpp  mobile_robot_interpretation_agent.cpp  mobile_robot_interpretation_agent.hpp  random_obstacle_generation_agent.cpp  random_obstacle_generation_agent.hpp
problem-solver/cxx/transport-module/keynodes/: keynodes.hpp
problem-solver/cxx/transport-module/test/: CMakeLists.txt
problem-solver/cxx/transport-module/test/test-structures/: example_1.scs  example_1_robots_initial_states.scs
problem-solver/cxx/transport-module/test/units/: cmake_test_discovery_08c0f5cc58.json  test_mobile_robot_coordination_agent.cpp
problem-solver/py/: server.py
problem-solver/py/modules/transport_module/: mobile_robot_coordination_agent.py  mobile_robot_interpretation_agent.py  transport_module.py
problem-solver/py/tests/transport_module/: test_transport_module.py
scripts/: start.sh
